2005-03-07  Norbert Koch  <viteno@xemacs.org>

	* Sumo packages released.

2005-03-05  Norbert Koch  <viteno@xemacs.org>

	* Packages released: xemacs-base.

2005-03-04  Norbert Koch  <viteno@xemacs.org>

	* Packages released: xemacs-base.

2005-02-28  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mule-ucs.

	* Packages released: latin-unity.

	* Packages released: mail-lib mule-ucs.

2005-02-19  Norbert Koch  <viteno@xemacs.org>

	* Packages released: viper.

	* Packages released: ediff.

2005-02-16  Norbert Koch  <viteno@xemacs.org>

	* Packages released: latin-euro-standards.

	* Packages released: latin-euro-standards latin-unity mule-ucs.

	* Packages released: latin-euro-standards latin-unity mule-ucs.

2005-02-15  Norbert Koch  <viteno@xemacs.org>

	* mule-packages/Makefile: Hook up latin-euro-standards to the
	build.

2005-02-15  Aidan Kehoe  <kehoea@parhasard.net>

	* package-compile.el: Package added; latin-euro-standards.

2005-02-14  Norbert Koch  <viteno@xemacs.org>

	* Packages released: text-modes vhdl.

2005-02-13  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ispell.

2005-02-12  Norbert Koch  <viteno@xemacs.org>

	* Packages released: auctex.

2005-02-10  Norbert Koch  <viteno@xemacs.org>

	* Packages released: auctex edit-utils perl-modes text-modes.

2005-02-03  Norbert Koch  <viteno@xemacs.org>

	* XEmacs.rules (package-info): Fix build, move comment out of the
	way.

	* Packages released: edit-utils pc prog-modes.

2005-02-03  Ben Wing  <ben@xemacs.org>

	* XEmacs.rules:
	* XEmacs.rules (XEMACS_BATCH_PREPARE_FOR_TEXINFO):
	* XEmacs.rules (FORMAT_INFO_USING_XEMACS_ARGS):
	* XEmacs.rules (FORMAT_INFO_USING_XEMACS):
	* XEmacs.rules (FORMAT_MULE_INFO_USING_XEMACS):
	* XEmacs.rules (BOOT_XEMACS):
	* XEmacs.rules (elcclean):
	* XEmacs.rules ($(AUTOLOAD_PATH)/auto-autoloads.el):
	* XEmacs.rules ($(AUTOLOAD_PATH)/custom-defines.el):
	* XEmacs.rules ($(AUTOLOAD_PATH)/custom-load.el):
	* XEmacs.rules (package-info):