@@ -1,3 +1,8 @@
+2005-03-09  Norbert Koch  <viteno@xemacs.org>
+
+	* package-compile.el: 
+	* xemacs-packages/Makefile (PACKAGES): New package re-builder.
+
 2005-03-07  Norbert Koch  <viteno@xemacs.org>
 
 	* Sumo packages released.
